# gp3

./: #CMakeLists.txt#  #Makefile#  #gp.cpp#  .gitignore  3dHarmonic.json  AMReX  CMakeLists.txt  Makefile~  abstractFactory.h  evaluate.cpp  evaluate.h  functional.cpp  functional.h  functionalFactory.h  geometry.cpp  geometry.h  gp.cpp  gp.sublime-project  gp.sublime-workspace  gpDropletFunctional3D.h  gpExceptions.h  initializer.cpp  initializer.h  install.sh  main.cpp  model.cpp  model.h  operators.cpp  operators.h  operatorsFactory.h  plotFile.cpp  plotFile.h  run.cpp  run.h  sampleInput.json  set_evaluate.sh  stencils.h  stepper.cpp  stepper.h  timer.h  (+3 more)
1D/: external  geometry.h~  kineticPotential.h
1D/src/: geometry.cpp~  geometry.h  kineticEnergy.cpp  kineticEnergy.h  potential.cpp  traits.h
1D/tst/: base.cpp  main.cpp~
cmake/: init.cmake
evaluate_templates/: evaluate_cylindrical.cpp  evaluate_cylindrical_template.cpp
examples/harmonic/: createInputFiles.py  input-template.json  input.json
old/: CMakeLists.txt  addModule.cpp  evaluate.cpp  evaluate.h  gp.cpp  gpDropletFunctional3D.cpp  initializer.cpp  initializer.h  main.cpp  operators.cpp  operators.h  plotFile.cpp  plotFile.h  sampleInput.json  tools.cpp
old/1D/: CMakeLists.txt  CMakeLists.txt~  kineticPotential.h~
old/1D/src/: functional.cpp  functional.h  geometry.cpp  geometry.h~  main.cpp  main.cpp~  potential.h  stepper.h  stepper.h~
old/1D/tst/: base.cpp~  main.cpp
old/evaluate_templates/: evaluate_cylindrical_template.cpp
old/tst/: LevelBldDiff.cpp  model-test.cpp
old/tst/test-twoLevels/: Untitled.ipynb  Untitled1.ipynb
python/: Backtrace.0  Untitled.ipynb  gp.ipynb  gp.py  gpIo.py  input.json  stencils.py  system.py  system_old.py  test.py  testGP.py
python/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  gp-checkpoint.ipynb
python/old/: gpIo.py  gp_simulations_old.py  input.json  numericDiff.py  stencils.py  test.py  trash
python/phiGhostTest/: phi_D_00000  phi_H  wave.json
python/phiTest/: phi_D_00000  phi_H  wave.json
python/testGPDropletSpherical/block_0/: box=0.parquet
python/testGPDropletSpherical/block_1/: box=0.parquet
python/testGPDropletSpherical/block_10/: box=0.parquet
python/testGPDropletSpherical/block_100/: box=0.parquet  description.json
python/testGPDropletSpherical/block_101/: box=0.parquet
python/testGPDropletSpherical/block_102/: box=0.parquet
python/testGPDropletSpherical/block_103/: box=0.parquet
python/testGPDropletSpherical/block_104/: box=0.parquet
python/testGPDropletSpherical/block_105/: box=0.parquet  description.json
python/testGPDropletSpherical/block_106/: box=0.parquet
python/testGPDropletSpherical/block_107/: box=0.parquet
python/testGPDropletSpherical/block_108/: box=0.parquet
python/testGPDropletSpherical/block_109/: box=0.parquet
python/testGPDropletSpherical/block_11/: box=0.parquet
python/testGPDropletSpherical/block_110/: box=0.parquet
python/testGPDropletSpherical/block_111/: box=0.parquet
python/testGPDropletSpherical/block_112/: box=0.parquet  description.json
python/testGPDropletSpherical/block_113/: box=0.parquet
python/testGPDropletSpherical/block_114/: box=0.parquet
python/testGPDropletSpherical/block_115/: box=0.parquet  description.json
python/testGPDropletSpherical/block_116/: box=0.parquet
python/testGPDropletSpherical/block_117/: box=0.parquet
python/testGPDropletSpherical/block_118/: box=0.parquet  description.json
python/testGPDropletSpherical/block_119/: box=0.parquet
python/testGPDropletSpherical/block_12/: box=0.parquet
python/testGPDropletSpherical/block_120/: box=0.parquet
python/testGPDropletSpherical/block_121/: box=0.parquet
python/testGPDropletSpherical/block_122/: box=0.parquet
python/testGPDropletSpherical/block_123/: box=0.parquet
python/testGPDropletSpherical/block_124/: box=0.parquet
python/testGPDropletSpherical/block_125/: box=0.parquet
python/testGPDropletSpherical/block_126/: box=0.parquet  description.json
python/testGPDropletSpherical/block_127/: box=0.parquet
python/testGPDropletSpherical/block_128/: box=0.parquet
python/testGPDropletSpherical/block_129/: box=0.parquet
python/testGPDropletSpherical/block_13/: box=0.parquet  description.json
python/testGPDropletSpherical/block_130/: box=0.parquet
python/testGPDropletSpherical/block_131/: box=0.parquet  description.json
python/testGPDropletSpherical/block_132/: box=0.parquet
python/testGPDropletSpherical/block_133/: box=0.parquet
python/testGPDropletSpherical/block_134/: box=0.parquet  description.json
python/testGPDropletSpherical/block_135/: box=0.parquet
python/testGPDropletSpherical/block_136/: box=0.parquet
python/testGPDropletSpherical/block_137/: box=0.parquet
python/testGPDropletSpherical/block_138/: box=0.parquet
python/testGPDropletSpherical/block_139/: box=0.parquet  description.json
python/testGPDropletSpherical/block_14/: box=0.parquet
python/testGPDropletSpherical/block_140/: box=0.parquet
python/testGPDropletSpherical/block_141/: box=0.parquet  description.json
python/testGPDropletSpherical/block_142/: box=0.parquet
pythonBindings/: CMakeLists.txt  gpIO.cpp  initializer.h  saveMultifab.cpp  saveMultifab.h
src/: CMakeCache.txt  CMakeLists.txt  functional.cpp  functional.h  functionalFactory.cpp  functionalFactory.h  geometry.cpp  geometry.h  gpDriver.cpp  gpDriver.h  kernelLauncher.h  main.cpp  normalization.cpp  normalization.h  operators.h  run.cpp  run.h  stepper.cpp  stepper.h  timers.cpp  tools.cpp  tools.h  traits.h  wavefunction.cpp  wavefunction.h
src/include/: test_data.hpp
testBoundaries/: CMakeLists.txt
tst/: AmrCoreDiff.cpp  AmrCoreDiff.h  AmrLevelDiff.cpp  AmrLevelDiff.h  CMakeLists.txt  main.cpp  model-test.cpp  test-multilevel.cpp  test-wavefunction.cpp
tst/openMPTests/: main.cpp  mainTests.cpp  mainTestsParallel.cpp  mpiTools.cpp  mpiTools.h  parallelTests.cpp
tst/test-twoLevels/: GP3 analysis.ipynb  Untitled.ipynb
tst/test-twoLevels/.ipynb_checkpoints/: Untitled1-checkpoint.ipynb
tst2/: test-wavefunction.cpp
(+5690 files in other folders)
